tdf#89774 oox: TotalTime is in minutes

(cherry picked from commit 302f413eec4da8c8572911d08e939186c5ac57cf)

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport5.cxx

Change-Id: Ie65a8adbd077997f4a13914dd8e0ba4d55afd7b7
Reviewed-on: https://gerrit.libreoffice.org/14852
Tested-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>